# cordon

./: .gitattributes  .gitignore  ASSETS.md  Cargo.toml  Makefile  README.md  deny.toml
crates/cordon-app/: Cargo.toml  README.md
crates/cordon-app/src/: lifecycle.rs  main.rs
crates/cordon-app/src/bunker/: camera.rs  fade.rs  interaction.rs  mod.rs  props.rs  resources.rs  systems.rs  textures.rs
crates/cordon-app/src/bunker/ambient/: systems.rs
crates/cordon-app/src/bunker/cctv/: audio.rs  bundles.rs  mod.rs  systems.rs
crates/cordon-app/src/bunker/dialogue/: commands.rs  mirror.rs  mod.rs  registry.rs  systems.rs  ui.rs
crates/cordon-app/src/bunker/geometry/: placement.rs
crates/cordon-app/src/bunker/input/: controller.rs  footsteps.rs  mod.rs  systems.rs
crates/cordon-app/src/bunker/laptop/: material.rs  mod.rs  systems.rs
crates/cordon-app/src/bunker/lighting/: bundles.rs  flicker.rs  mod.rs  systems.rs
crates/cordon-app/src/bunker/particles/: mod.rs  steam.rs
crates/cordon-app/src/bunker/pills/: components.rs  mod.rs  resources.rs  systems.rs
crates/cordon-app/src/bunker/rack/: mod.rs  shelf_prop.rs  systems.rs
crates/cordon-app/src/bunker/radio/: mod.rs  queue.rs  systems.rs
crates/cordon-app/src/bunker/rooms/: antechamber.rs  armory.rs  command.rs  hall.rs  infirmary.rs  kitchen.rs  pipes.rs  quarters.rs  workshop.rs
crates/cordon-app/src/bunker/sleep/: mod.rs  systems.rs
crates/cordon-app/src/bunker/toast/: mod.rs  systems.rs
crates/cordon-app/src/bunker/visitor/: audio.rs  lifecycle.rs  mod.rs  state.rs
crates/cordon-app/src/dev/: cheat.rs  diagnostic.rs  mod.rs
crates/cordon-app/src/laptop/: hover.rs  mod.rs
crates/cordon-app/src/laptop/environment/: anomaly.rs  daynight.rs  fog.rs  mod.rs  terrain.rs
crates/cordon-app/src/laptop/fog/: apply.rs  mask.rs  sync.rs
crates/cordon-app/src/laptop/input/: controller.rs
crates/cordon-app/src/laptop/map/: mod.rs  relics.rs  tooltip.rs
crates/cordon-app/src/laptop/npcs/: mod.rs  selection.rs
crates/cordon-app/src/laptop/ui/: intel.rs  map.rs  mod.rs  squad.rs  trade.rs  (+1 more)
crates/cordon-app/src/locale/: mod.rs
crates/cordon-app/src/menu/: ending.rs  main_menu.rs  mod.rs  pause.rs  style.rs  timescale.rs
crates/cordon-app/src/quest/: arrival.rs  bridge.rs  mod.rs
crates/cordon-app/src/steam/: systems.rs
crates/cordon-app/src/ui/: fonts.rs  mod.rs  scale.rs
crates/cordon-bevy/: Cargo.toml  README.md
crates/cordon-bevy/src/: debug.rs  main.rs
crates/cordon-bevy/src/ai/: behavior.rs  combat.rs  death.rs  loot.rs  mod.rs  squad.rs
crates/cordon-bevy/src/bunker/: camera.rs  components.rs  geometry.rs  interaction.rs  mod.rs  particles.rs  props.rs  resources.rs  room.rs  systems.rs  textures.rs  visitor.rs
crates/cordon-bevy/src/dev/: inspector.rs  mod.rs
crates/cordon-bevy/src/laptop/: controls.rs  environment.rs  fog.rs  hover.rs  mod.rs  palette.rs  ui.rs
crates/cordon-bevy/src/locale/: mod.rs
crates/cordon-bevy/src/quest/: arrival.rs  bridge.rs  mod.rs  npc_bridge.rs
crates/cordon-bevy/src/steam/: achievements.rs  mod.rs  systems.rs
crates/cordon-bevy/src/world/: mod.rs
crates/cordon-core/: Cargo.toml  README.md
crates/cordon-core/src/: bunker.rs  event.rs  faction.rs  item.rs  lib.rs  mission.rs  npc.rs  player.rs  sector.rs  time.rs
crates/cordon-core/src/bunker/: mod.rs
crates/cordon-core/src/economy/: item.rs  mission.rs  mod.rs  price.rs
crates/cordon-core/src/entity/: archetype.rs  bunker.rs  faction.rs  mod.rs  name.rs  npc.rs  perk.rs  player.rs  squad.rs
crates/cordon-core/src/item/: category.rs  data.rs  def.rs  effect.rs  instance.rs  inventory.rs  loadout.rs  mod.rs  query.rs  scope.rs  stash.rs
crates/cordon-core/src/object/: mod.rs
crates/cordon-core/src/primitive/: condition.rs  credits.rs  distance.rs  duration.rs  environment.rs  experience.rs  hazard.rs  health.rs  id.rs  location.rs  loyalty.rs  mod.rs  pool.rs  rank.rs  rarity.rs  relation.rs  resistances.rs  tier.rs  time.rs  trust.rs  uid.rs
crates/cordon-core/src/world/: area.rs  consequence.rs  event.rs  loot.rs  mission.rs  mod.rs  price.rs  quest.rs  sector.rs  time.rs  trade.rs
crates/cordon-data/: Cargo.toml  README.md
crates/cordon-data/src/: catalog.rs  error.rs  lib.rs  loot.rs
crates/cordon-data/src/catalog/: mod.rs
crates/cordon-data/src/gamedata/: mod.rs
crates/cordon-data/src/loader/: mod.rs
crates/cordon-data/src/loot/: mod.rs
crates/cordon-sim/: Cargo.toml  README.md
crates/cordon-sim/src/: behavior.rs  combat.rs  commands.rs  components.rs  day.rs  death.rs  events.rs  factions.rs  lib.rs  loot.rs  market.rs  missions.rs  npcs.rs  plugin.rs  resources.rs  sectors.rs  shop.rs  spawn.rs  squad_ai.rs  tuning.rs  world.rs  world_init.rs
crates/cordon-sim/src/behavior/: mod.rs
crates/cordon-sim/src/bunker/: mod.rs  pills.rs  upgrades.rs
crates/cordon-sim/src/combat/: mod.rs
crates/cordon-sim/src/components/: mod.rs  npc.rs  relic.rs  squad.rs
crates/cordon-sim/src/day/: events.rs  factions.rs  mod.rs  payroll.rs  radio.rs  systems.rs  trade.rs  world_events.rs
crates/cordon-sim/src/death/: mod.rs
crates/cordon-sim/src/effects/: consume.rs  corruption.rs  mod.rs  throwable.rs
crates/cordon-sim/src/entity/: mod.rs  npc.rs  relic.rs
crates/cordon-sim/src/loot/: mod.rs
crates/cordon-sim/src/quest/: condition.rs  consequence.rs  context.rs  death.rs  dispatch.rs  drive.rs  engine.rs  messages.rs  mod.rs  refs.rs  registry.rs  spawn.rs  state.rs  travel.rs
crates/cordon-sim/src/resources/: clock.rs  mod.rs  player.rs  world.rs
crates/cordon-sim/src/simulation/: day.rs  events.rs  factions.rs  loadout.rs  missions.rs  mod.rs  npcs.rs
crates/cordon-sim/src/spawn/: generator.rs  loadout.rs  mod.rs  relics.rs  waypoints.rs
crates/cordon-sim/src/squad/: behave.rs  commands.rs  engagement.rs  formation.rs  goals.rs  lifecycle.rs  mod.rs  scan.rs
crates/cordon-sim/src/state/: market.rs  mod.rs  sectors.rs  world.rs
crates/cordon-sim/src/world/: day.rs  events.rs  factions.rs  generator.rs  loadout.rs  mod.rs  state.rs
(+665 files in other folders)
