# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./crates/cordon-bevy",
    "./crates/cordon-core",
    "./crates/cordon-data",
    "./crates/cordon-sim",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.92"
edition = "2024"
license = "MIT"
publish = false

authors = ["Oleh Martsokha"]
repository = "https://github.com/martsokha/cordon"
homepage = "https://github.com/martsokha/cordon"

[workspace.dependencies]
# Internal crates
cordon-bevy = { path = "./crates/cordon-bevy" }
cordon-core = { path = "./crates/cordon-core" }
cordon-data = { path = "./crates/cordon-data" }
cordon-sim = { path = "./crates/cordon-sim" }

# Game engine
bevy = { version = "0.18", features = ["debug", "jpeg"] }
bevy-inspector-egui = { version = "0.36", features = [] }
bevy_rand = { version = "0.14", features = ["wyrand"] }
bevy_prng = { version = "0.14", features = ["wyrand"] }

# Localization and dialogue
bevy_fluent = { version = "0.14", features = [] }
fluent_content = { version = "0.0.5", features = [] }
unic-langid = { version = "0.9", features = [] }
bevy_yarnspinner = { version = "0.8", features = [] }

# Physics
avian3d = { version = "0.6", features = [] }

# (De)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
serde_with = { version = "3.18", features = [] }

# Derive macros and error handling
thiserror = { version = "2", features = [] }
derive_more = { version = "2", features = ["display", "from", "into", "deref", "constructor"] }
derive_builder = { version = "0.20", features = [] }
strum = { version = "0.28", features = ["derive"] }

# Primitive datatypes
uuid = { version = "1", features = ["v4", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
semver = { version = "1", features = ["serde"] }

# Randomness
rand = { version = "0.10", features = [] }
