# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cordon-app"
description = "Cordon game application: rendering, input, UI, audio, windowing"
keywords = ["cordon", "game"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["steam", "diagnostic", "inspector", "development"]

# Steam integration: achievements, overlay, presence. Pulls in the
# `bevy-steamworks` dependency. Drop for a CI / headless / non-Steam
# build with `--no-default-features --features <others>`.
steam = ["dep:bevy-steamworks"]

# Dev-mode bundle: F3 toggles map fog of war, F4 cycles sim
# time-scale (1× / 4× / 16× / 64×), and `bevy/file_watcher`
# reloads shaders / GLBs / yarn / FTL on save. The top of the
# dev-feature pyramid — `diagnostic` and `inspector` both
# pull this in so you can't get hot-reload without the cheats,
# and vice versa. Release builds exclude it regardless.
development = ["bevy/file_watcher"]

# FPS counter + Bevy diagnostic log plugins (frame-time, entity
# count). Observational only. Implies `development` so dev-
# facing assemblies stay cohesive — no "diagnostic but no hot-
# reload" middle ground.
diagnostic = ["development"]

# World inspector (F1) — `bevy_inspector_egui`. Split from
# `diagnostic` because it pulls in egui and the inspector's
# quick variant, which are heavier than the plain diagnostic
# plugins. Implies `development` for the same reason.
inspector = ["development", "dep:bevy-inspector-egui"]

# Tracy profiler hooks. Enable when running under `tracy-capture`
# or the Tracy GUI to record per-system timings. Adds instrumentation
# overhead — leave off for regular play and benchmarking.
profile = ["bevy/trace_tracy"]

[dependencies]
# Internal crates
cordon-core = { workspace = true, features = [] }
cordon-data = { workspace = true, features = [] }
cordon-sim = { workspace = true, features = [] }

# Game engine
bevy = { workspace = true, features = [] }
bevy-inspector-egui = { workspace = true, features = [], optional = true }
bevy_hanabi = { workspace = true, features = [] }
bevy_rand = { workspace = true, features = [] }
bevy_prng = { workspace = true, features = [] }
rand = { workspace = true, features = [] }

# Localization
bevy_fluent = { workspace = true, features = [] }
fluent_content = { workspace = true, features = [] }
unic-langid = { workspace = true, features = [] }

# Dialogue
bevy_yarnspinner = { workspace = true, features = [] }
yarnspinner = { workspace = true, features = [] }

# Physics
avian3d = { workspace = true, features = [] }

# Derive macros
derive_more = { workspace = true, features = [] }
strum = { workspace = true, features = [] }

# Steam (optional: run without via --no-default-features)
bevy-steamworks = { version = "0.16", optional = true, features = [] }
