# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cordon-bevy"
description = "Bevy game client for Cordon"
keywords = ["cordon", "bevy", "game"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["steam"]
steam = ["dep:bevy-steamworks"]

[dependencies]
# Internal crates
cordon-core = { workspace = true, features = [] }
cordon-data = { workspace = true, features = [] }
cordon-sim = { workspace = true, features = [] }

# Game engine
bevy = { workspace = true, features = [] }
bevy-inspector-egui = { workspace = true, features = [] }
rand = { workspace = true, features = [] }

# Localization and dialogue
bevy_fluent = { workspace = true, features = [] }
fluent_content = { workspace = true, features = [] }
unic-langid = { workspace = true, features = [] }
bevy_yarnspinner = { workspace = true, features = [] }

# Physics
avian3d = { workspace = true, features = [] }

# Derive macros
strum = { workspace = true, features = [] }

# Steam (optional — run without via --no-default-features)
bevy-steamworks = { version = "0.16", optional = true, features = [] }
