# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cordon-bevy"
description = "Bevy game client for Cordon"
keywords = ["cordon", "bevy", "game"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["steam", "diagnostic", "inspector", "cheat"]

# Steam integration: achievements, overlay, presence. Pulls in the
# `bevy-steamworks` dependency. Drop for a CI / headless / non-Steam
# build with `--no-default-features --features <others>`.
steam = ["dep:bevy-steamworks"]

# FPS counter + Bevy diagnostic log plugins (frame-time, entity count).
# Observational only — read-only state dump to screen and stderr.
# Release builds exclude it regardless of this flag.
diagnostic = []

# World inspector (F1) — `bevy_inspector_egui`. Split from `diagnostic`
# because it pulls in egui and the inspector's quick variant, which are
# heavier than the plain diagnostic plugins. Release builds exclude it.
inspector = ["dep:bevy-inspector-egui"]

# Dev cheats: F3 toggles map fog of war, F4 cycles sim time-scale
# (1× / 4× / 16× / 64×). Mutates game state — keep off for anything
# remotely like a playtest. Release builds exclude it.
cheat = []

# Tracy profiler hooks. Enable when running under `tracy-capture`
# or the Tracy GUI to record per-system timings. Adds instrumentation
# overhead — leave off for regular play and benchmarking.
profile = ["bevy/trace_tracy"]

[dependencies]
# Internal crates
cordon-core = { workspace = true, features = [] }
cordon-data = { workspace = true, features = [] }
cordon-sim = { workspace = true, features = [] }

# Game engine
bevy = { workspace = true, features = [] }
bevy-inspector-egui = { workspace = true, features = [], optional = true }
bevy_rand = { workspace = true, features = [] }
bevy_prng = { workspace = true, features = [] }
rand = { workspace = true, features = [] }
bevy_hanabi = "0.18"

# Localization and dialogue
bevy_fluent = { workspace = true, features = [] }
fluent_content = { workspace = true, features = [] }
unic-langid = { workspace = true, features = [] }
bevy_yarnspinner = { workspace = true, features = [] }

# Physics
avian3d = { workspace = true, features = [] }

# Derive macros
derive_more = { workspace = true }
strum = { workspace = true, features = [] }

# Steam (optional: run without via --no-default-features)
bevy-steamworks = { version = "0.16", optional = true, features = [] }
