# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cordon-core"
description = "Core ontology types for the Cordon game world"
keywords = ["cordon", "core", "types"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
serde = { workspace = true }
derive_more = { workspace = true }
derive_builder = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
semver = { workspace = true }
