# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cordon-data"
description = "Game data catalog and asset loading for Cordon"
keywords = ["cordon", "data", "catalog"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
cordon-core = { workspace = true, features = [] }

# Game engine
bevy = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }

# Error handling
thiserror = { workspace = true, features = [] }
