# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "cordon-sim"
description = "World simulation engine for Cordon"
keywords = ["cordon", "simulation", "engine"]
readme = "README.md"

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Internal crates
cordon-core = { workspace = true }
cordon-data = { workspace = true }

# Game engine — cordon-sim is a Bevy plugin so the world lives in ECS.
bevy = { workspace = true }
bevy_rand = { workspace = true }
bevy_prng = { workspace = true }

# Dialogue runtime — quest flags use `YarnValue` so the sim can
# round-trip variables to/from the dialogue runner without an
# intermediate conversion layer.
bevy_yarnspinner = { workspace = true }

# Randomness
rand = { workspace = true }
bevy_behave = "0.5"
